--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^36.0.0",
     "@ckeditor/ckeditor5-react": "^5.0.6",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "antd": "^5.1.7",
     "axios": "^1.3.1",
+    "gapi-script": "^1.2.0",
     "html-react-parser": "^3.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.7.0"
+    "react-oauth2": "^1.1.2",
+    "react-router-dom": "^6.7.0",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
