--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ckeditor/ckeditor5-react": "^5.0.6",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
+    "@reduxjs/toolkit": "^1.9.2",
     "antd": "^5.1.7",
     "axios": "^1.3.1",
     "gapi-script": "^1.2.0",
@@ -23,6 +24,7 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.7.1",
     "react-oauth2": "^1.1.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1"
   },
