--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@reduxjs/toolkit": "^1.9.2",
     "antd": "^5.1.7",
     "axios": "^1.3.1",
+    "chart.js": "^4.2.1",
     "gapi-script": "^1.2.0",
     "html-react-parser": "^3.0.8",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-oauth2": "^1.1.2",
