--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://gitname.github.io/Blair-Owens-web-Clone",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^36.0.0",
@@ -32,6 +35,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "gh-pages": "^5.0.0",
     "vite": "^4.0.0"
   }
 }
