delete the Estate

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://gitname.github.io/Blair-Owens-web-Clone",
+  "homepage": "https://mwisemarierose.github.io/Blair-Owens-web-Clone",
   "type": "module",
   "scripts": {
     "dev": "vite",
